# ayuda-dana

./: README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/ayuda_dana_backend/: exceptions.py
backend/app/ayuda_dana_backend/documents/: base.py  petition.py  user.py
backend/app/ayuda_dana_backend/models/: auth.py  base.py  objectid.py  petition.py  user.py
backend/app/ayuda_dana_backend/routers/v1/: __init__.py  auth.py  petition.py  user.py
backend/app/ayuda_dana_backend/services/: auth.py  database.py
